Fix some issues in the building generation phase

--- a/flutter_annotation_form_builder/build.yaml
+++ b/flutter_annotation_form_builder/build.yaml
@@ -5,6 +5,6 @@ targets:
         enabled: True
         options:
           build_extensions:
-            '^lib/{{}}.dart': 'lib/generated/{{}}.g.dart'
+            '^lib/{{}}.dart': ['lib/generated/{{}}.g.dart']
 #        generate_for:
 #          - lib/teste/*
