--- a/flutter_annotation_form_builder/pubspec.yaml
+++ b/flutter_annotation_form_builder/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_annotation_form_builder
-description: A new Flutter package project.
+description: Annotation System for flutter_form_builder package
 version: 0.0.1
-homepage:
+homepage: https://github.com/precupstefan/flutter_annotation_form_builder
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
